--- a/melon-head/src/index.html
+++ b/melon-head/src/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Melon Head</title>
   <link rel="stylesheet" href="/static/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div id="app"></div>
