--- a/melon-head/src/index.html
+++ b/melon-head/src/index.html
@@ -3,6 +3,7 @@
   <title>Melon Head</title>
   <link rel="stylesheet" href="/static/css/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
 </head>
 <body>
   <div id="app"></div>
