--- a/melon-head/src/index.html
+++ b/melon-head/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>Melon Head</title>
+  <title>Orca / Melon Head</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 </head>
